[gd_scene load_steps=4 format=3 uid="uid://11pbtfitmk6l"]

[ext_resource type="Script" uid="uid://clneahuxclf2h" path="res://GUI/Widgets/purchase_factory_button.gd" id="1_81i28"]
[ext_resource type="AudioStream" uid="uid://bkeda21i82dbc" path="res://Assets/sfx/Sounds/Actions/ACTION_Factory Building_SFX1-001.wav" id="3_5gq31"]

[sub_resource type="AtlasTexture" id="AtlasTexture_81i28"]

[node name="PurchaseFactoryButton" type="HBoxContainer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -48.0
offset_right = 242.0
offset_bottom = 48.0
grow_vertical = 2
script = ExtResource("1_81i28")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer" groups=["no_hover_noise"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
focus_mode = 0
icon = SubResource("AtlasTexture_81i28")
icon_alignment = 1
expand_icon = true

[node name="FactoryNameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="PriceLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "$200
Inorganics
Factory
( Gears, Springs)"
horizontal_alignment = 1

[node name="PurchaseNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5gq31")

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
